<resources>
    <string name="app_name">Réseau E.M.F</string>
    <string name="action_settings">Parametre</string>
    <string name="lbl_name">Nom</string>
    <string name="lbl_firstname">Prénom</string>
    <string name="lbl_pickdate">Choix date</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_mail">Email</string>
    <string name="lbl_domainstudy">Domain Etude</string>
    <string name="lbl_city">Ville</string>
    <string name="lbl_phone">Telephone</string>
    <string name="lbl_btn_validate">Finaliser votre inscription</string>
    <string name="lbl_btn_cancel">Annuler</string>
    <string name="lbl_btn_check_mail">Test mail</string>
    <string name="lbl_btn_check">Control</string>
    <string name="lbl_auth_title">Authentification</string>
    <string name="email">Email</string>
    <string name="mdp">Mot de passe</string>
    <string name="btn_go">Go !</string>
    <string name="lbl_linkedin">LINKEDIN</string>
    <string name="lbl_password">Mot de passe</string>
    <string name="lbl_souvenir">Se souvenir de moi</string>
    <string name="lbl_mdp_oublie">Mot de passe oublié ?</string>
    <string name="lbl_ins_via">Ou via</string>
    <string name="lbl_direct">Inscription directe</string>
    <string name="lbl_register">inscription</string>
    <string name="lbl_vos_id">Vos identifiants</string>
    <string name="lbl_votre_mail">Votre email</string>
    <string name="lbl_requiered"> * </string>
    <string name="lbl_votre_pwd">Votre mot de passe</string>
    <string name="lbl_votre_pwd2">Confirmation mot de passe</string>
    <string name="indice">.</string>
    <string name="lbl_accueil">Accueil</string>
    <string name="lbl_btn_accueil">Accueil</string>
    <string name="lbl_btn_suivant">Suivant</string>
    <string name="lbl_votre_id">Informations Personnelles</string>
    <string name="lbl_btn_precedent">Précédent</string>
    <string name="lbl_datenaisance">Date de naissance</string>
    <string name="lbl_tel">Téléphone</string>
    <string name="lbl_profil_emf">Profil EMF</string>
    <string name="lbl_etat">Vous êtes ou seriez</string>
    <string name="lbl_section">Section</string>
    <string name="lbl_section_ma_ville">J\'aimerais créer une section dans ma ville</string>
    <string name="lbl_competence">Vos compétences:talents</string>
    <string name="lbl_contact">Vous souhaitez être contacté pour :</string>
    <string name="lbl_offre">Offre de stage:emploi</string>
    <string name="lbl_info_ville">Activités EMF dans votre ville</string>
    <string name="lbl_info_national">Activités EMF National</string>
    <string name="lbl_projet">Projets selon vos compétences</string>
    <string name="lbl_cursus">Vos Cursus</string>
    <string name="btn_new_cursus">Nouveau cursus</string>
    <string name="lbl_init_diplome">Intitulé du diplome</string>
    <string name="lbl_btn_annuler">Annuler</string>
    <string name="lbl_btn_ajouter">Ajouter</string>
    <string name="lbl_btn_previous">Précédent</string>
    <string name="lbl_btn_next">Suivant</string>
    <string name="lbl_zipcode">CP</string>
    <string name="lbl_editxt_city">Ville</string>
    <string name="lbl_editxt_birthday">Date de naissance</string>
    <string name="lbl_btn_choose_birthday">Choisir</string>
    <string name="lbl_birthday">JJMMAAAA</string>
    <string name="lbl_lastName">Nom</string>
    <string name="lbl_editxt_phone">Téléphone</string>
    <string name="lbl_status">Engagement</string>
    <string name="lbl_skills">Vos compétences/talents :</string>
    <string name="lbl_offer">Offre de stage/emploi</string>
    <string name="lbl_info_EMFcity">Activités EMF dans ma ville</string>
    <string name="lbl_project">Projets liés à compétences</string>
    <string name="btn_new_curriculum">Ajouter un nouveau cursus</string>
    <string name="lbl_curriculum">Vos cursus</string>
    <string name="lbl_entiled_diploma">Intitulé du diplôme</string>
    <string name="cursus_lbl_city_studies">Ville d\'études</string>
    <string name="lbl_date_begin">Date début</string>
    <string name="lbl_date_end">Date fin</string>
    <string name="lbl_choose_date">Choisir</string>
    <string name="lbl_format">Format : mm-aaaa</string>
    <string name="lbl_resume_submit">Validation d\'inscription</string>
    <string name="action_profil">Profil</string>
    <string name="action_about_emf">A propos d\'EMF</string>
    <string name="action_statistical">Statistiques</string>
    <string name="action_emf_network">Réseaux EMF</string>
    <string name="action_newsletter_managment">Gestion des newsletters</string>
    <string name="action_admin">Adminstrateur</string>
    <string name="lbl_about_emf">A quoi ça sert :</string>
    <string name="lbl_emf_network">Réseau EMF</string>
    <string name="lbl_profil">Votre Profil</string>
    <string name="lbl_name_value">****************</string>
    <string name="lbl_lastName_value">********************</string>
    <string name="lbl_mail_value">***************</string>
    <string name="lbl_firstname_value">************</string>
    <string name="lbl_birthday_value">**********</string>
    <string name="lbl_zipcode_value">*******</string>
    <string name="lbl_city_value">**************</string>
    <string name="lbl_phone_value">***************</string>
    <string name="lbl_status_value">*******************************************************************************</string>
    <string name="lbl_section_value">********</string>
    <string name="lbl_skills_value">***************</string>
    <string name="lbl_contact_value">********* ************ **********</string>
    <string name="lbl_curriculum_value">*******</string>
    <string name="lbl_btn_disable">Désactiver</string>
    <string name="lbl_btn_update">Modifier</string>
    <string name="title_activity_criterias">Critères de la liste</string>
    <string name="title_activity_ldf">Listes</string>

    <string-array name="liste_ville">
        <item>Ville</item>
        <item>Paris</item>
        <item>Marseille</item>
    </string-array>

    <string-array name="liste_section">
        <item>EMF Lille</item>
        <item>EMF Paris</item>
        <item>EMF Marseille</item>

        <item>EMF Lille</item>
        <item>EMF Paris</item>
        <item>EMF Marseille</item>

        <item>EMF Lille</item>
        <item>EMF Paris</item>
        <item>EMF Marseille</item>

        <item>EMF Lille</item>
        <item>EMF Paris</item>
        <item>EMF Marseille</item>

        <item>EMF Lille</item>
        <item>EMF Paris</item>
        <item>EMF Marseille</item>
    </string-array>
    <string name="title_curriculum_list">Curriculums</string>
    <string name="title_curriculum_detail">Curriculum Detail</string>
    <string name="lbl_entiled_establishment">Etablissement</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="lbl_info_perso">Informations Personnelles</string>
    <string name="lbl_zipcode_label">Code Postal</string>
    <string name="lbl_change_pwd">Changer le mot de passe</string>
    <string name="lbl_current_pwd">Mot de passe actuel</string>
    <string name="lbl_new_pwd">Nouveau mot de passe</string>
    <string name="lbl_confirmation_pwd">Confirmer le mot de passe</string>
    <string name="lbl_btn_save">Enregistrer</string>
    <string name="lbl_btn_delete">Supprimer</string>
    <string name="lbl_degree_study">Niveau d\'étude</string>
    <string name="lbl_discipline">Domaine d\'étude</string>
    <string name="title_cursus_list">Vos Cursus</string>
    <string name="title_cursus_detail">Cursus détails</string>
    <string name="label_new_cursus">Nouveau cursus</string>
    <string name="lbl_ins_recap">Validation de l\'inscription</string>
    <string name="lbl_modify_ins">Modifier votre formulaire</string>
    <string name="Accueil_admin">Admin</string>
    <string name="List_managment">Gestion des listes</string>
    <string name="send_message">Envoyer un message</string>
    <string name="lbl_send_alias">Emetteur</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_subject">Objet :</string>
    <string name="lbl_skill">Compétences/Talents</string>
    <string name="lbl_write_message">Entrez votre message</string>
    <string name="subject">Objet</string>
    <string name="lbl_btn_send">Envoyer</string>
    <string name="title_activity_diffusion_criterias">DiffusionCriteriasActivity</string>
    <string name="lbl_diffusion_criterias">Critères de la liste</string>
    <string name="lbl_val_criteria">Saisir le mots clés</string>
    <string name="lbl_ldf_criteria">Choix critère</string>
    <string name="lbl_diffusion_criterias_name">Nom liste :</string>
    <string name="lbl_ldf_result_count">Nb resultats:</string>
    <string name="int_null">-</string>
    <string name="lbl_add_criteria">Ajouter un cirtère à la liste:</string>
    <string name="lbl_ldf">Les listes de diffusions</string>
    <string name="Abstract">Abstract</string>
    <string name="Note">Note</string>

</resources>
