<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/curriculum_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="fill_parent"

    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="6dp"
    android:textIsSelectable="true"
    tools:context="com.emf_asso.bdd.reseauetudiantsmuslmansdefrance.CurriculumDetailFragment">

    <Spinner
        android:id="@+id/spinner_discipline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/liste_domaines_etude"
        android:padding="4dp" />

    <Spinner
        android:id="@+id/spinner_degree_study"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/liste_diplome"
        android:padding="4dp" />

    <EditText
        android:id="@+id/cursus_editxt_entiled_diploma"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_border"
        android:hint="@string/lbl_entiled_diploma"
        android:inputType="text"
        android:padding="4dp" />

    <EditText
        android:id="@+id/cursus_editxt_establishment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/text_border"
        android:hint="@string/lbl_entiled_establishment"
        android:inputType="text"
        android:padding="4dp" />


    <EditText
        android:id="@+id/cursus_editxt_city_study"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:background="@drawable/text_border"
        android:hint="@string/cursus_lbl_city_studies"
        android:padding="4dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:orientation="horizontal">


            <EditText
                android:id="@+id/cursus_editxt_date_begin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="2"

                android:background="@drawable/text_border"
                android:hint="@string/lbl_date_begin"
                android:padding="4dp" />


            <Button

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lbl_choose_date" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:orientation="horizontal">


            <EditText
                android:id="@+id/cursus_editxt_date_end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/text_border"
                android:hint="@string/lbl_date_end" />


            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/lbl_choose_date" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_format"
            android:textSize="10sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/lbl_btn_annuler"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"

            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/lbl_btn_ajouter"
                android:textAllCaps="false"
                android:textColor="@color/accent_material_light_1"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>