<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_auth_title"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/editxt_email"
                        style="@style/text_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/text_border"
                        android:padding="4dp"
                        android:text="@string/lbl_mail" />

                    <EditText
                        android:id="@+id/editxt_pwd"
                        style="@style/text_style"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/text_border"
                        android:padding="4dp"
                        android:text="@string/lbl_password" />
                </LinearLayout>

                <Button
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/accent_material_light_1"
                    android:text="@string/btn_go"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkbox_remember_me"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lbl_souvenir" />

            <TextView
                android:id="@+id/txtview_forget_pwd"
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:text="@string/lbl_mdp_oublie" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="#FF909090" />

            <TextView
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_ins_via" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal"

                >

                <ImageView
                    android:id="@+id/btn_linkedin"
                    style="@style/transparence"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:src="@drawable/ic_linkedin" />

                <ImageView
                    android:id="@+id/btn_viadeo"
                    style="@style/transparence"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:src="@drawable/ic_viadeo" />
            </LinearLayout>

            <TextView
                style="@style/text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_direct" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal"

                >

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:background="@color/accent_material_light_1"
                    android:padding="25dp"
                    android:text="@string/lbl_register"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
